--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,16 +4,16 @@ header {
     
 }
 
-body{
-    background-color: black;
+/* body{
+    background-color:;
     
-}
+} */
 
 #button{
     text-align: center;
 }
 
-html {
+body {
     height: 100%;
     background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
     overflow: hidden;
