--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,3 +96,72 @@ body {
     }
   }
   
+  /* CSS for the name, number , fortune and colour
+  */
+  #name.col-12{
+    text-align: center;
+    font-size: 50px;
+    font-family: "lato", sans-serif;
+    font-weight: 300;
+    letter-spacing: 10px;
+    color: #FFF;
+    padding: 10 10 10 10;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  #number.col-4{
+    text-align: center;
+    font-size: 50px;
+    font-family: "lato", sans-serif;
+    font-weight: 200;
+    color: #FFF;
+    padding: 10 10 10 10;
+    margin-top: auto;
+    margin-bottom: auto;
+    border-style: dashed;
+    border-spacing: 2px;
+  }
+
+  #fortune.col-4{
+    text-align: center;
+    font-size: 25px;
+    font-family: "lato", sans-serif;
+    font-weight: 200;
+    color: #FFF;
+    padding: 10 10 10 10;
+    margin-top: auto;
+    margin-bottom: auto;
+    border-style: dashed;
+    border-spacing: 2px;
+  }
+
+  #color.col-4{
+    text-align: center;
+    font-size: 50px;
+    font-family: "lato", sans-serif;
+    font-weight: 200;
+    color: #FFF;
+    padding: 10 10 10 10;
+    margin-top: auto;
+    margin-bottom: auto;
+    border-style: dashed;
+    border-spacing: 2px;
+  }
+
+  /* CSS for the GIFs ; evenly spaced between the two
+  */
+  #gif1{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    justify-content: space-evenly;
+  }
+
+  #gif2{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    justify-content: space-evenly;
+
+  }
