--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,12 +111,22 @@ h6 {
     align-content: center;
     justify-content: center;
     color: #fff;
+    font-size: 1.4em;
 
     
 }
 #fortune {
     grid-area: fortune;
     color: #fff;
+    border-radius: 8px;
+    font-size: 1.5em;
+    /* border-style:dashed;
+    border-width: 1.5px;
+    border-color:#fff;
+    padding: 10px;
+    border-left: 20px;
+    border-right: 20px; */
+
 
     
 }
@@ -124,6 +134,7 @@ h6 {
 #mood {
     grid-area: mood;
     color: #fff;
+    font-size: 1.2em;
 
     
     
@@ -132,7 +143,7 @@ h6 {
 #number {
     grid-area: number;
     color: #fff;
-
+    font-size: 1.2em;
     
    
 }
@@ -140,7 +151,7 @@ h6 {
 #color {
     grid-area: color;
     color: #fff;
-
+    font-size: 1.2em;
     
  
 }
@@ -292,6 +303,88 @@ body {
     bottom: 20px;
   }
   
+.tagline {text-align: center;
+  font-size: 1.3em;
+
+}
+
+  /*neon Button*/
+.a-n2{ text-align: center;
+  text-decoration: none; position: relative;  padding: 15px 30px; overflow: hidden; transition: 0.2s all;  color: #fff;  letter-spacing: 4px;
+}
+
+.a-n2:hover{
+  background:#d7d9da; color: #000;
+  box-shadow: 0px 0px 10px #67c3ee, 0px 0px 40px#8ed1f0, 0px 0px 80px #a7e2fd; transition-delay: 0.2s;
+}
 
 
-  
+.a-n2 span:nth-child(1){
+  top: 0px;
+  left: -91%;
+  width: 100%;
+  height: 2px;
+  background: #26a0da;
+}
+
+.a-n2:hover span:nth-child(1){
+
+  left:0%; 
+  transition: 0.3s; 
+}
+
+
+.a-n2 span:nth-child(3){
+  bottom: 0px;
+  right: -91%;
+  width: 100%;
+  height: 2px;
+  background: #26a0da;
+}
+
+.a-n2:hover span:nth-child(3){
+
+  right:0%; 
+  transition: 0.3s; 
+}
+
+.a-n2 span:nth-child(2){
+  bottom: -70%;
+  right: 0%;
+  width: 2px;
+  FONT-WEIGHT: 100;
+  background: #26a0da;
+  height: 100%;
+}
+
+.a-n2:hover span:nth-child(2){
+
+  bottom:0%; 
+  transition: 0.3s; 
+}
+
+
+
+.a-n2 span:nth-child(4){
+  top: -70%;
+  left: 0%;
+  width: 2px;
+  FONT-WEIGHT: 100;
+  background: #26a0da;
+  height: 100%;
+}
+
+.a-n2:hover span:nth-child(4){
+
+  top:0%; 
+  transition: 0.3s; 
+}
+
+button{
+  background: transparent;
+  border-radius: 8px;
+  font-style: bold;
+  font-family: monospace;
+  border-color: white;
+  font-size: 0.9em;
+}
