--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,13 @@ header {
     color: #fff;
     animation: pulsate 0.11s ease-in-out infinite alternate;   
     color: #fff;
+    
 }
+#indexHeader {
+    margin-bottom: 50px
+}
+
+/* header neon effect */
 @keyframes pulsate {
     100% {
       /* Larger blur radius */
@@ -35,13 +41,22 @@ header {
         0 0 94px #fff,
         0 0 140px #fff;
     }
-  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+}
 
 h2 {
     text-align: center;
     font-size: 4em;
-
 }
+
 body {
     margin: 0;
     padding: 10px;
@@ -51,44 +66,19 @@ body {
     margin-right: 100px;
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: black;
     color: #fff;
-
-    /*
-    border-style:dashed;
-    border-width: 1.5px;
-    border-color:#fff;
-    padding-left: 20px;
-    padding-right: 20px; */
+    height: auto;
+    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+    background-size: cover;
 }
   
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0;
-  }
-
-#button{
+.tagline {
     text-align: center;
+    font-size: 1.3em;
+    margin-bottom: 50px
 }
 
-
-#number {
-    text-align: center;
-}
-#fortune {
-    text-align: center;
-}
-#mood {
-    text-align: center;
-}
-#color {
-    text-align: center;
-}
-
+/* landing page grid */
 .grid {
     display: grid;
     column-gap: 20px;
@@ -112,48 +102,35 @@ h6 {
     justify-content: center;
     color: #fff;
     font-size: 1.4em;
-
-    
 }
+
 #fortune {
     grid-area: fortune;
     color: #fff;
-    border-radius: 8px;
     font-size: 1.5em;
-    /* border-style:dashed;
-    border-width: 1.5px;
-    border-color:#fff;
-    padding: 10px;
-    border-left: 20px;
-    border-right: 20px; */
+    text-align: center;
 
-
-    
 }
 
 #mood {
     grid-area: mood;
     color: #fff;
-    font-size: 1.2em;
-
-    
-    
+    font-size: 1.2em; 
+    text-align: center;
 }
   
 #number {
     grid-area: number;
     color: #fff;
     font-size: 1.2em;
-    
-   
+    text-align: center;
 }
   
 #color {
     grid-area: color;
     color: #fff;
     font-size: 1.2em;
-    
- 
+    text-align: center;
 }
   
 #moodGIF {
@@ -162,9 +139,6 @@ h6 {
     justify-content: center;
     align-items:flex-start;
     color: #fff;
-
-    
-    
 }
 
 #colorGIF {
@@ -173,22 +147,9 @@ h6 {
     justify-content: center;
     align-items:flex-start;
     color: #fff;
-
-
 }
 
-
-
-#button{
-    text-align: center;
-}
-
-body {
-    height: auto;
-    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-    background-size: cover;
-  }
-
+/* background */
 
 @keyframes move-background {
   from {
@@ -235,8 +196,8 @@ body {
 }
 
 .stars {
- background: black url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png) repeat;
- position: absolute;
+    background: black url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png) repeat;
+    position: absolute;
 	top: 0;
 	bottom: 0;
 	left: 0;
@@ -257,15 +218,11 @@ body {
     z-index: 0;
     
     -moz-animation:move-background 70s linear infinite;
-  -ms-animation:move-background 70s linear infinite;
-  -o-animation:move-background 70s linear infinite;
-  -webkit-animation:move-background 70s linear infinite;
-  animation:move-background 70s linear infinite;
-	
+    -ms-animation:move-background 70s linear infinite;
+    -o-animation:move-background 70s linear infinite;
+    -webkit-animation:move-background 70s linear infinite;
+    animation:move-background 70s linear infinite;
 }
-
-
-
 
 .clouds{
 	width:10000px;
@@ -278,13 +235,12 @@ body {
     bottom: 0;
     z-index: 3;
 
-   -moz-animation:move-background 150s linear infinite;
-  -ms-animation:move-background 150s linear infinite;
-  -o-animation:move-background 150s linear infinite;
-  -webkit-animation:move-background 150s linear infinite;
-  animation:move-background 150s linear infinite;
+    -moz-animation:move-background 150s linear infinite;
+    -ms-animation:move-background 150s linear infinite;
+    -o-animation:move-background 150s linear infinite;
+    -webkit-animation:move-background 150s linear infinite;
+    animation:move-background 150s linear infinite;
 }
-
 
 .moon {
   height: 50vh;
@@ -301,14 +257,9 @@ body {
     z-index: 3;
     left: 20px;
     bottom: 20px;
-  }
-  
-.tagline {text-align: center;
-  font-size: 1.3em;
-
 }
 
-  /*neon Button*/
+/* neon Button */
 .a-n2{ text-align: center;
   text-decoration: none; position: relative;  padding: 15px 30px; overflow: hidden; transition: 0.2s all;  color: #fff;  letter-spacing: 4px;
 }
@@ -317,7 +268,6 @@ body {
   background:#d7d9da; color: #000;
   box-shadow: 0px 0px 10px #67c3ee, 0px 0px 40px#8ed1f0, 0px 0px 80px #a7e2fd; transition-delay: 0.2s;
 }
-
 
 .a-n2 span:nth-child(1){
   top: 0px;
@@ -328,11 +278,9 @@ body {
 }
 
 .a-n2:hover span:nth-child(1){
-
   left:0%; 
   transition: 0.3s; 
 }
-
 
 .a-n2 span:nth-child(3){
   bottom: 0px;
@@ -358,12 +306,9 @@ body {
 }
 
 .a-n2:hover span:nth-child(2){
-
   bottom:0%; 
   transition: 0.3s; 
 }
-
-
 
 .a-n2 span:nth-child(4){
   top: -70%;
@@ -375,12 +320,16 @@ body {
 }
 
 .a-n2:hover span:nth-child(4){
-
   top:0%; 
   transition: 0.3s; 
 }
 
-button{
+#button{
+    text-align: center;
+    padding-top: 1.2em;
+}
+
+button {
   background: transparent;
   border-radius: 8px;
   font-style: bold;
